Added new screens took away old ones

--- a/website/views/homepage.ejs
+++ b/website/views/homepage.ejs
@@ -292,39 +292,14 @@
                             <span>Dashboard</span>
                         </div>
 
-                        <div class="screen-item" data-groups='["main", "all"]'>
-                            <a href="img/demoimg/screen2big.jpg" data-lightbox="screens2" data-title="Delicious caption"><img src="img/demoimg/screen2.jpg" alt="SCREEN" class="screenImg" /></a>
+                        <div class="screen-item" data-groups='["comrades", "all"]'>
+                            <a href="img/demoimg/screen2big.jpg" data-lightbox="screens2" data-title="Delicious caption"><img src="img/screens/Comrades.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Comrades</span>
                         </div>
 
-                        <div class="screen-item" data-groups='["main", "all"]'>
-                            <a href="img/demoimg/screen3big.jpg" data-lightbox="screens3" data-title="Delicious caption"><img src="img/demoimg/screen3.jpg" alt="SCREEN" class="screenImg" /></a>
+                        <div class="screen-item" data-groups='["events", "all"]'>
+                            <a href="img/demoimg/screen3big.jpg" data-lightbox="screens3" data-title="Delicious caption"><img src="img/screens/Events.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Events</span>
-                        </div>
-
-                        <div class="screen-item" data-groups='["main", "all"]'>
-                            <a href="img/demoimg/screen4big.jpg" data-lightbox="screens4" data-title="Delicious caption"><img src="img/demoimg/screen4.jpg" alt="SCREEN" class="screenImg" /></a>
-                            <span>Places</span>
-                        </div>
-
-                        <div class="screen-item" data-groups='["main", "messages", "all"]'>
-                            <a href="img/demoimg/screen5big.jpg" data-lightbox="screens5" data-title="Comrades Messaging is unlike any other, by combining your Social Media, Email, Text Messages and Corades own Messaging system you can throw out all those other messaging apps and stick to one."><img src="img/demoimg/screen5.jpg" alt="SCREEN" class="screenImg" /></a>
-                            <span>Messages</span>
-                        </div>
-
-                        <div class="screen-item" data-groups='["messages", "all"]'>
-                            <a href="img/demoimg/screen6big.jpg" data-lightbox="screens6" data-title="Comrade brings back TRUE Private Messaging by never storing your conversations, every message is erased immediately after delivery or within 24 hours."><img src="img/demoimg/screen6.jpg" alt="SCREEN" class="screenImg" /></a>
-                            <span>Private Messaging</span>
-                        </div>
-
-                        <div class="screen-item" data-groups='["messages", "all"]'>
-                            <a href="img/demoimg/screen7big.jpg" data-lightbox="screens7" data-title="With Comrades group messaging you and your friends will always stay in touch."><img src="img/demoimg/screen7.jpg" alt="SCREEN" class="screenImg" /></a>
-                            <span>Group Messaging</span>
-                        </div>
-
-                        <div class="screen-item" data-groups='["socialn", "all"]'>
-                            <a href="img/demoimg/screen8big.jpg" data-lightbox="screens8" data-title="FastChat lets you quickly get in touch or reply to any of your Social Media contacts."><img src="img/demoimg/screen8.jpg" alt="SCREEN" class="screenImg" /></a>
-                            <span>FastChat</span>
                         </div>
 
                     </div>
