--- a/website/views/homepage.ejs
+++ b/website/views/homepage.ejs
@@ -86,7 +86,7 @@
 
             <div class="three-col">
                 <div class="iconColWrap">
-                    <i class="icon ion-ios7-people-outline"></i>
+                    <i class="fa ion-ios7-people-outline"></i>
                     <h2>Stay Social</h2>
                     <p>We created Comrade to keep you in touch with the events and people that matter most to you, while giving you what you want, a way out of social media.</p>
                 </div>
@@ -94,7 +94,7 @@
 
             <div class="three-col">
                 <div class="iconColWrap">
-                    <i class="icon ion-ios7-locked-outline"></i>
+                    <i class="fa ion-ios7-locked-outline"></i>
                     <h2>Privacy and Security</h2>
                     <p>Rest assured Comrade will never store any of your social media information to sell it off. Actually we dont even care what your first name is.</p>
                 </div>
@@ -102,7 +102,7 @@
 
             <div class="three-col">
                 <div class="iconColWrap">
-                    <i class="icon ion-ios7-chatboxes-outline"></i>
+                    <i class="fa ion-ios7-chatboxes-outline"></i>
                     <h2>Encrypted Messaging</h2>
                     <p>Comrade offers <u>encrypted session messaging</u>, what this is is a secured connection between two Comrade users that not even our servers can read what your saying. Insuring you the user that your private messages, are truly private.</p>
                 </div>
@@ -135,7 +135,7 @@
                     <i class="icon ion-ios7-calendar-outline"></i>
                     <div class="rightColTextWrap">
                         <h2>Events</h2>
-                        <p>Keeping you up to date with all your social events</p>
+                        <p>Comrade makes managing and viewing your events more unified and easy to keep track of.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -153,7 +153,7 @@
                     <i class="icon ion-ios7-person-outline"></i>
                     <div class="rightColTextWrap">
                         <h2>Comrades</h2>
-                        <p>Comrade unites your social media friends into one viewable, interactable Comrades list.</p>
+                        <p>Comrade unites your social media friends into one Comrades list.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -225,7 +225,7 @@
                     <i class="icon ion-ios7-telephone-outline"></i>
                     <div class="leftColTextWrap">
                         <h2>Voice Chat</h2>
-                        <p>With Comrades real-time voice chat system, its like calling your friends, without using your precious minutes </p>
+                        <p>With Comrades real-time voice chat system, its like calling your friends, without using your precious minutes</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -242,14 +242,14 @@
     <section id="betaContainer" class="section-160-160 textureBgSection" style="background-image: url('img/bg-texture1.jpg');">
         <h1 id="betaSignup" class="sectionTitle">Beta</h1>
         <div class="titleSeparator"></div>
-        <h3 class="sectionDescription">Beta starts July 20th! Don't miss out!</h3>
+        <h3 class="sectionDescription">Beta starts August 1st! Don't miss out!</h3>
         <h3 class="sectionDescription">All participating Beta testers get all the extra bells and whistles for free!</h3>
         <!--reviews wrapper-->
         <div class="separator80"></div>
         <div class="row">
             <div class="seven-col prefix-three">
                     <input type="email" name="betaEmail" id="betaEmail" placeholder="Your Email..." required/>
-                    <button id="submitBeta">Beta Signup</button>
+                    <button id="submitBeta">I want to help test the app!</button>
 
                 <p id="formSubmitMessage"></p>
             </div>
@@ -293,12 +293,12 @@
                         </div>
 
                         <div class="screen-item" data-groups='["comrades", "all"]'>
-                            <a href="img/demoimg/screen2big.jpg" data-lightbox="screens2" data-title="Delicious caption"><img src="img/screens/Comrades.jpg" alt="SCREEN" class="screenImg" /></a>
+                            <a href="img/screens/Comrades.jpg" data-lightbox="screens2" data-title="Delicious caption"><img src="img/screens/Comrades.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Comrades</span>
                         </div>
 
                         <div class="screen-item" data-groups='["events", "all"]'>
-                            <a href="img/demoimg/screen3big.jpg" data-lightbox="screens3" data-title="Delicious caption"><img src="img/screens/Events.jpg" alt="SCREEN" class="screenImg" /></a>
+                            <a href="img/screens/Events.jpg" data-lightbox="screens3" data-title="Delicious caption"><img src="img/screens/Events.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Events</span>
                         </div>
 
