--- a/website/views/homepage.ejs
+++ b/website/views/homepage.ejs
@@ -24,7 +24,7 @@
         <div id="layerslider" style="width: 1170px;max-width: 1170px; height: 690px;">
             <!-- first slide -->
             <div class="ls-slide">
-                <img src="img/demoimg/slider1.png" alt="Phone" class="ls-l" style="top: 30px; left: 0;"
+                <img src="img/demoimg/comrades-galaxy-s4.png" alt="Phone" class="ls-l" style="top: 30px; left: 0;"
                     data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 100; durationin: 2000" />
 
                 <p class="ls-l sliderText" style="top: 50px; left: 550px;"
@@ -39,7 +39,7 @@
             </div>
             <!-- second slide -->
             <div class="ls-slide">
-                <img src="img/demoimg/slider2.png" alt="Phone" class="ls-l" style="top: -40px; left: 0;"
+                <img src="img/demoimg/comrades-galaxy-s4.png" alt="Phone" class="ls-l" style="top: -40px; left: 0;"
                     data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 100; durationin: 2000" />
 
                 <p class="ls-l sliderText" style="top: 50px; left: 550px;"
@@ -54,12 +54,12 @@
             </div>
             <!-- third slide -->
             <div class="ls-slide">
-                <img src="img/demoimg/slider3.png" alt="Phone" class="ls-l" style="top: 0px; left: 0;"
+                <img src="img/demoimg/comrades-galaxy-s4.png" alt="Phone" class="ls-l" style="top: 0px; left: 0;"
                     data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 100; rotatein: 0; durationin: 2000" />
 
                 <p class="ls-l sliderText" style="top: 50px; left: 550px;"
                     data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 50; durationin: 2000;">
-                <span>Privacy</span><br/>is our #1 focus</p>
+                <span>We're bringing</span><br/>privacy back</p>
 
                 <a href="#aboutContainer" class="buttonBig ls-l" style="top: 300px; left: 550px;"
                     data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;">LEARN MORE</a>
@@ -180,7 +180,7 @@
 
             <!--phone image-->
             <div class="four-col" style="text-align: center;">
-                <img src="img/demoimg/phone.png" alt="iOS" />
+                <img src="img/demoimg/dashboard-galaxy-s4.png" alt="iOS" />
             </div>
 
             <!--right side icons-->
@@ -242,7 +242,7 @@
     <section id="betaContainer" class="section-160-160 textureBgSection" style="background-image: url('img/bg-texture1.jpg');">
         <h1 id="betaSignup" class="sectionTitle">Beta</h1>
         <div class="titleSeparator"></div>
-        <h3 class="sectionDescription">Beta starts August 1st! Don't miss out!</h3>
+        <h3 class="sectionDescription">Beta starts August 15th! Don't miss out!</h3>
         <h3 class="sectionDescription">All participating Beta testers get all the extra bells and whistles for free!</h3>
         <!--reviews wrapper-->
         <div class="separator80"></div>
