--- a/website/views/homepage.ejs
+++ b/website/views/homepage.ejs
@@ -29,7 +29,7 @@
 
                 <p class="ls-l sliderText" style="top: 50px; left: 550px;"
                     data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 50; durationin: 2000;">
-                <span>Comrade</span> unite<br/>your social friends</p>
+                <span>Comrade</span> unites<br/>your social friends</p>
 
                 <a href="#aboutContainer" class="buttonBig ls-l" style="top: 300px; left: 550px;"
                     data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;">LEARN MORE</a>
@@ -44,7 +44,7 @@
 
                 <p class="ls-l sliderText" style="top: 50px; left: 550px;"
                     data-ls="offsetxin: 0; offsetxout : 0; offsetyin: 50; durationin: 2000;">
-                <span>Getting Directions</span><br/>just got easier</p>
+                <span>Giving Directions</span><br/>just got easier</p>
 
                 <a href="#aboutContainer" class="buttonBig ls-l" style="top: 300px; left: 550px;"
                     data-ls="offsetxin: 0; offsetxout: 0; delayin: 300; offsetyin: 100; durationin: 2000;">LEARN MORE</a>
@@ -96,7 +96,7 @@
                 <div class="iconColWrap">
                     <i class="fa ion-ios7-locked-outline"></i>
                     <h2>Privacy and Security</h2>
-                    <p>Rest assured Comrade will never store any of your social media information to sell it off. Actually we dont even care what your first name is.</p>
+                    <p>Rest assured Comrade will never store any of your social media information. We don't even care what your name or email is.</p>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
                 <div class="iconColWrap">
                     <i class="fa ion-ios7-chatboxes-outline"></i>
                     <h2>Encrypted Messaging</h2>
-                    <p>Comrade offers <u>encrypted session messaging</u>, what this is is a secured connection between two Comrade users that not even our servers can read what your saying. Insuring you the user that your private messages, are truly private.</p>
+                    <p>Comrade offers <u>encrypted session messaging</u>, a secured connection between two Comrade users. Insuring you that your private messages, are truly private.</p>
                 </div>
             </div>
 
@@ -112,7 +112,7 @@
                 <div class="iconColWrap">
                     <i class="fa fa-ban"></i>
                     <h2>Free with no ads</h2>
-                    <p>Comrade promises to always remain FREE of charge and to never shove Ads in your face.</p>
+                    <p>Enjoy Comrade for FREE with no ads!</p>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
     <section id="featureContainer" class="section-80-80 grayBgSection">
         <h1 class="sectionTitle">Features</h1>
         <div class="titleSeparator"></div>
-        <h3 class="sectionDescription">Comrade has a lot to offer, to everyone from social users to non social users.</h3>
+        <h3 class="sectionDescription">Comrade has so much to offer:</h3>
         <div class="separator80"></div>
         <div class="row">
 
@@ -153,7 +153,7 @@
                     <i class="icon ion-ios7-person-outline"></i>
                     <div class="rightColTextWrap">
                         <h2>Comrades</h2>
-                        <p>Comrade unites your social media friends into one Comrades list.</p>
+                        <p>Comrade unites your social media friends into one list.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -162,7 +162,7 @@
                     <i class="icon ion-ios7-chatbubble-outline"></i>
                     <div class="rightColTextWrap">
                         <h2>Messages</h2>
-                        <p>Get access to most of your social media messages from Twitter, LinkedIn and more!</p>
+                        <p>Get access to most of your social media messages all in one place!</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -171,7 +171,7 @@
                     <i class="icon ion-ios7-bolt-outline"></i>
                     <div class="rightColTextWrap">
                         <h2>FastChat</h2>
-                        <p>FastChat is what allows users to quickly get in touch with there social media friends without the use of the social media website.</p>
+                        <p>FastChat allows you to quickly get in touch with your social media friends without the use of the social media website.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -189,7 +189,7 @@
                     <i class="icon ion-ios7-location-outline"></i>
                     <div class="leftColTextWrap">
                         <h2>Invite</h2>
-                        <p>Stop giving bad directions, just swipe a friend, hit invite and let them be on there way with the proper directions.</p>
+                        <p>Stop giving bad directions, just swipe a friend, hit invite and let them be on their way with exact directions to your exact location.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -198,7 +198,7 @@
                     <i class="icon ion-pinpoint"></i>
                     <div class="leftColTextWrap">
                         <h2>Find</h2>
-                        <p>Easily request any of your friends location with the swipe of a contact and tap of a button</p>
+                        <p>Easily ask any of your friends for directions to them with the swipe of a friend and tap of a button</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -207,7 +207,7 @@
                     <i class="icon ion-ios7-chatboxes-outline"></i>
                     <div class="leftColTextWrap">
                         <h2>Instant Messaging</h2>
-                        <p>Instant Messaging has never been so private and secure</p>
+                        <p>Instant Messaging has never been so private and secure. Our server removes your messages the moment your friend views it.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -215,8 +215,8 @@
                 <div class="iconLeftColWrap">
                     <i class="icon ion-ios7-videocam-outline"></i>
                     <div class="leftColTextWrap">
-                        <h2>Video Chat</h2>
-                        <p>Stay in touch with Comrade's real-time Video Chat</p>
+                        <h2>Video and Voice Chat</h2>
+                        <p>Stay in touch with your friends real-time with Comrade's Voice and Video Chat.  </p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -224,8 +224,8 @@
                 <div class="iconLeftColWrap">
                     <i class="icon ion-ios7-telephone-outline"></i>
                     <div class="leftColTextWrap">
-                        <h2>Voice Chat</h2>
-                        <p>With Comrades real-time voice chat system, its like calling your friends, without using your precious minutes</p>
+                        <h2>Anonymous Users</h2>
+                        <p>Use Comrade's Anonymous Sign In feature to remain anonymous. Now that's privacy </p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -243,14 +243,19 @@
         <h1 id="betaSignup" class="sectionTitle">Beta</h1>
         <div class="titleSeparator"></div>
         <h3 class="sectionDescription">Beta starts August 15th! Don't miss out!</h3>
-        <h3 class="sectionDescription">All participating Beta testers get all the extra bells and whistles for free!</h3>
+        <h3 class="sectionDescription">All participating Beta testers get extra bells and whistles for free!</h3>
         <!--reviews wrapper-->
         <div class="separator80"></div>
         <div class="row">
-            <div class="seven-col prefix-three">
-                    <input type="email" name="betaEmail" id="betaEmail" placeholder="Your Email..." required/>
-                    <button id="submitBeta">I want to help test the app!</button>
-
+            <div class="eight-col prefix-two">
+                <input class=" six-col prefix-one" type="email" name="betaEmail" id="betaEmail" placeholder="Your Email..." required/>
+                <button class="prefix-one" id="submitBeta">I want to test the app!</button>
+                <br><br>
+                <img src="img/confused_about_beta.png" class="two-col prefix-three">
+                <div class="beta-description">
+                    <h4>Wait.... Whats BETA?</h4>
+                    <p>To put it lightly, beta testing is the second stage of app development, beta testing is done right before an application launches to the public. Beta testing is one of the most important aspects to any application development and its important that all Beta testers (you) inform us about issues and give us your most honest feedback.  </p>
+                </div>
                 <p id="formSubmitMessage"></p>
             </div>
 
@@ -288,17 +293,17 @@
                     <div id="screensWrap">
 
                         <div class="screen-item" data-groups='["main", "all"]'>
-                            <a href="img/screens/Dashboard.jpg" data-lightbox="screens1" data-title="Delicious caption"><img src="img/screens/Dashboard.jpg" alt="SCREEN" class="screenImg" /></a>
+                            <a href="img/screens/Dashboard.jpg" data-lightbox="screens1" data-title="Your dashboard will contain all of your latest notifications, as well as allows you to quickly respond to them so you can go about your awesome day!"><img src="img/screens/Dashboard.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Dashboard</span>
                         </div>
 
                         <div class="screen-item" data-groups='["comrades", "all"]'>
-                            <a href="img/screens/Comrades.jpg" data-lightbox="screens2" data-title="Delicious caption"><img src="img/screens/Comrades.jpg" alt="SCREEN" class="screenImg" /></a>
+                            <a href="img/screens/Comrades.jpg" data-lightbox="screens2" data-title="Comrades is a list of your social media friends,private comrades and anonymous users."><img src="img/screens/Comrades.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Comrades</span>
                         </div>
 
                         <div class="screen-item" data-groups='["events", "all"]'>
-                            <a href="img/screens/Events.jpg" data-lightbox="screens3" data-title="Delicious caption"><img src="img/screens/Events.jpg" alt="SCREEN" class="screenImg" /></a>
+                            <a href="img/screens/Events.jpg" data-lightbox="screens3" data-title="Get a 7 day forecast of your latest events at the tap of a button you can view your entire day from start to finish. Get directions at the tap of a button, invite more Comrades to your event or send out alerts to all the attendees."><img src="img/screens/Events.jpg" alt="SCREEN" class="screenImg" /></a>
                             <span>Events</span>
                         </div>
 
@@ -312,7 +317,7 @@
 
 
     <!--BEGIN GET APP CONTAINER-->
-    <section id="getappContainer" style="background-image: url('img/bg-texture2.jpg');">
+    <section id="getappContainer" style="background-image: url('img/bg-texture1.jpg');">
 
     </section>
     <!--END GET APP WRAPPER-->
@@ -327,7 +332,7 @@
         <a href="https://www.facebook.com/comradeapp"><i class="fa fa-facebook"></i></a>
 
         <div class="separator80"></div>
-        <p>Copyright &copy; 2014<br/> Comrade is a <a href="#">TeknoloGenie</a> product.
+        <p>Copyright &copy; 2014<br/> Aaron Russell
     </section>
     <!--END FOOTER WRAPPER-->
 
