Made some changes based on user experience

--- a/website/views/homepage.ejs
+++ b/website/views/homepage.ejs
@@ -144,7 +144,7 @@
                     <i class="icon ion-ios7-location-outline"></i>
                     <div class="rightColTextWrap">
                         <h2>Places</h2>
-                        <p>Share your favorite places with any of your social media friends or Comrades</p>
+                        <p>Share your favorite places with any of your social media friends or Comrades.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -198,7 +198,7 @@
                     <i class="icon ion-pinpoint"></i>
                     <div class="leftColTextWrap">
                         <h2>Find</h2>
-                        <p>Easily ask any of your friends for directions to them with the swipe of a friend and tap of a button</p>
+                        <p>Easily ask any of your friends for directions to them with the swipe of a friend and tap of a button.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -216,7 +216,7 @@
                     <i class="icon ion-ios7-videocam-outline"></i>
                     <div class="leftColTextWrap">
                         <h2>Video and Voice Chat</h2>
-                        <p>Stay in touch with your friends real-time with Comrade's Voice and Video Chat.  </p>
+                        <p>Stay in touch with your friends real-time with Comrade's Voice and Video Chat.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -225,7 +225,7 @@
                     <i class="icon ion-ios7-telephone-outline"></i>
                     <div class="leftColTextWrap">
                         <h2>Anonymous Users</h2>
-                        <p>Use Comrade's Anonymous Sign In feature to remain anonymous. Now that's privacy </p>
+                        <p>Use Comrade's Anonymous Sign In feature to remain anonymous. Now that's privacy.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
